src/objects/SessionM_Transaction__c.object
<CustomObject>
    <description>This object stores the transaction details of the Comping of Points for the user</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SessionM Transactions</relationshipLabel>
        <relationshipName>SessionM_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CumulativeAvailablePoints__c</fullName>
        <label>Cumulative Available Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoyaltyPoints__c</fullName>
        <label>Loyalty Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReasonCodes__c</fullName>
        <label>ReasonCodes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>554</fullName>
                </value>
                <value>
                    <fullName>557</fullName>
                </value>
                <value>
                    <fullName>555</fullName>
                </value>
                <value>
                    <fullName>559</fullName>
                </value>
                <value>
                    <fullName>558</fullName>
                </value>
                <value>
                    <fullName>560</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SessionM Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMT-{0000000000}</displayFormat>
        <label>SessionM Transaction Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SessionM Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>